<resources>
    <string name="app_name">ZeroVelocityRelease</string>
    <string name="login_greeting">Welcome to CookBook!</string>
    <string name="login_prompt">Login to get cooking</string>
    <string name="register_greeting">Welcome to CookBook!</string>
    <string name="register_prompt">Register to get cooking</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="add_ingredient_button">+</string>
    <string name="ingredient_name_hint">Ingredient name</string>
    <string name="ingredient_quantity_hint">Quantity</string>
    <string name="ingredient_unit_hint">Unit</string>
    <string name="ingredient_prep_hint">Preparation style</string>
    <string name="cookware_label">Cookware</string>
    <string name="cookware_hint">Enter or select cookware</string>

    <string-array name="categories">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
        <item>Snack</item>
    </string-array>

    <string-array name="time_units">
        <item>Minutes</item>
        <item>Hours</item>
    </string-array>

    <string-array name="difficulty_levels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="suggested_tags">
        <item>Quick</item>
        <item>Healthy</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Gluten Free</item>
        <item>High Protein</item>
        <item>Cheap</item>
        <item>Comfort Food</item>
    </string-array>

    <string-array name="ingredient_units">
        <item>Cups</item>
        <item>Tablespoons</item>
        <item>Teaspoons</item>
        <item>Grams</item>
        <item>Milliliters</item>
        <item>Ounces</item>
        <item>Pounds</item>
        <item>Other</item>
    </string-array>

    <string-array name="preparation_styles">
        <item>Chopped</item>
        <item>Minced</item>
        <item>Diced</item>
        <item>Sliced</item>
        <item>Softened</item>
        <item>Crushed</item>
        <item>Other</item>
    </string-array>

    <string-array name="cookware_items">
        <item>Pan</item>
        <item>Pot</item>
        <item>Skillet</item>
        <item>Baking Tray</item>
        <item>Oven Dish</item>
        <item>Mixing Bowl</item>
        <item>Whisk</item>
        <item>Spatula</item>
        <item>Other</item>
    </string-array>
</resources>