<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!-- LinearLayout Container for Register Screen -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#007E6E">

        <!-- LinearLayout Container for Register Form -->
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:background = "@drawable/roundstyle"
            android:padding ="20dp">

            <!-- Greeting Text Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="24sp"
                    android:text="@string/register_greeting"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="15sp"
                    android:text="@string/register_prompt"/>
            </LinearLayout>

            <!-- Input Fields Section -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="2"
                android:layout_marginTop="16dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_marginBottom="8dp" />
                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginBottom="8dp" />
                <EditText
                    android:id="@+id/confirmPasswordInput"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginBottom="8dp" />
                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/username_hint"
                    android:maxLines="1"
                    android:layout_marginBottom="8dp" />
            </LinearLayout>

            <!-- Buttons Section -->
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">
                <Button
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="registerValidation"
                    android:text="@string/register_button"
                    android:backgroundTint="#73AF6F"/>
                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="goToLogin"
                    android:text="@string/login_button"
                    android:backgroundTint="#73AF6F"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>