<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- LinearLayout Container for Login Screen -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#007E6E">

        <!-- LinearLayout Container for Login Form -->
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:background="@drawable/roundstyle"
            android:padding="20dp">

            <!-- Greeting Text Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/login_greeting"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/login_prompt"
                    android:textSize="15sp" />
            </LinearLayout>

            <!-- Input Fields Section -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:layout_marginTop="16dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginBottom="8dp"/>
            </LinearLayout>

            <!-- Buttons Section -->
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">
            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:onClick="loginValidation"
                android:text="@string/login_button"
                android:backgroundTint="#73AF6F"/>
            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center"
                android:onClick="goToRegister"
                android:text="@string/register_button"
                android:backgroundTint="#73AF6F"
                android:layout_marginStart="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>